# pp_project_lapo_bisognin

C++/: CMakeLists.txt
C++/include/: parKmeans.h  seqKmeans.h  utilities.h
C++/src/: main.cpp  parKmeans.cpp  seqKmeans.cpp  utilities.cpp
Python/: main.py  parKmeans.py  seqKmeans.py  utils.py
